--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-dotenv": "^0.1.3",
+    "react-emoji-render": "^1.2.4",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-share": "^4.4.0",
